--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,26 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Navbar from '../components/Navbar.astro';
+import Hero from '../components/Hero.astro';
+import About from '../components/About.astro';
+import Portfolio from '../components/Portfolio.astro';
+import Contact from '../components/Contact.astro';
+import Footer from '../components/Footer.astro';
+import VideoTestimonial from '../components/VideoTestimonial.astro';
+import FlayerVideo from '../components/FlayerVideo.astro';
+import Carousel from '../components/Carousel.astro';
 ---
 
-<Layout>
-	<Welcome />
+<Layout title="CASSANDRA LADRU | Fotografía">
+  <Navbar />
+  <main>
+    <Hero />
+    <About />
+    <FlayerVideo
+    <!-- <VideoTestimonial /> -->
+    <Portfolio />
+    <Carousel/>
+    <Contact />
+    <Footer />
+  </main>
 </Layout>
