--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -23,13 +23,13 @@
         <p class="text-gray-700 leading-relaxed">
           Based in Byron Bay but available worldwide, I've had the privilege of photographing weddings and fashion shoots across Australia, Europe, and Asia.
         </p>
-        <div class="pt-4">
+        <!-- <div class="pt-4">
           <img 
             src="/images/signature.png" 
             alt="Cassandra Ladru signature" 
             class="h-16 w-auto"
           />
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
