--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,9 +16,8 @@ import Carousel from '../components/Carousel.astro';
   <main>
     <Hero />
     <About />
-    <FlayerVideo
-    <!-- <VideoTestimonial /> -->
-    <Portfolio />
+    <FlayerVideo/>
+<Portfolio />
     <Carousel/>
     <Contact />
     <Footer />
