--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,7 +5,7 @@ import { Icon } from 'astro-icon/components';
 <section class="relative h-screen w-full overflow-hidden">
   <div class="absolute inset-0">
     <img 
-      src="/foto1.jpg" 
+      src="/foto1.webp" 
       alt="Fotografía artística" 
       class="h-full w-full object-cover"
     />
@@ -13,21 +13,21 @@ import { Icon } from 'astro-icon/components';
   </div>
 
   <div class="absolute inset-0 flex flex-col items-center justify-center text-white z-10">
-    <h1 class="text-4xl md:text-6xl tracking-widest font-light mb-1">CASSANDRA LADRU</h1>
-    <p class="text-sm tracking-widest uppercase">PHOTOGRAPHY</p>
+    <h1 class="text-4xl md:text-6xl tracking-widest font-light mb-1">ÉLODIE MOREAUX</h1>
+    <p class="text-sm tracking-widest uppercase">FOTOGRAFÍA</p>
   </div>
 
   <!-- Contenedor inferior con posición ajustada para móviles -->
   <div class="absolute bottom-0 left-0 right-0 p-6 pb-10 md:pb-6 flex justify-between items-center z-10 mb-3 md:mb-0">
     <div class="text-white text-xs tracking-widest">
       <span class="mr-2">/01</span>
-      <span class="mx-2">Wedding</span>
+      <span class="mx-2">Casamiento</span>
       <span class="mx-2">.</span>
       <span class="mx-2">Lifestyle</span>
       <span class="mx-2">.</span>
       <span class="mx-2">Fashion</span>
       <span class="mx-2">.</span>
-      <span class="ml-2">Photography</span>
+      <span class="ml-2">Fotografía</span>
     </div>
     <a href="#about" class="text-white flex flex-col items-center group">
       <span class="mb-2 text-sm tracking-widest">SKIP</span>
