--- a/src/components/VideoTestimonial.astro
+++ b/src/components/VideoTestimonial.astro
@@ -6,7 +6,7 @@
   <div class="absolute inset-0 w-full h-full bg-black">
     <div class="image-pan-effect">
       <img 
-        src="/foto1.jpg" 
+        src="/foto1.webp" 
         alt="Wedding ceremony" 
         class="w-full h-full object-cover grayscale brightness-75"
       />
