--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,12 +6,12 @@ import About from '../components/About.astro';
 import Portfolio from '../components/Portfolio.astro';
 import Contact from '../components/Contact.astro';
 import Footer from '../components/Footer.astro';
-import VideoTestimonial from '../components/VideoTestimonial.astro';
+
 import FlayerVideo from '../components/FlayerVideo.astro';
 import Carousel from '../components/Carousel.astro';
 ---
 
-<Layout title="CASSANDRA LADRU | Fotografía">
+<Layout title="ÉLODIE MOREAUX | Fotografía">
   <Navbar />
   <main>
     <Hero />
